<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_daily_activity"
        android:icon="@drawable/ic_daily_activity"
        android:title="@string/title_daily_activity" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_music_video"
        android:icon="@drawable/ic_music_video"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>
